add: employee CRUD and swagger documentation
