# storage/api-docs/api-docs.json
@@ -393,7 +393,7 @@
                                 "required": [
                                     "full_name",
                                     "email",
-                                    "phone"
+                                    "phone_number"
                                 ],
                                 "properties": {
                                     "full_name": {
@@ -405,7 +405,8 @@
                                         "format": "email",
                                         "example": "john@example.com"
                                     },
-                                    "phone": {
+                                    "phone_number": {
+                                        "description": "Phone number with country code",
                                         "type": "string",
                                         "example": "+998901234567"
                                     }
@@ -440,7 +441,7 @@
                                                     "type": "string",
                                                     "example": "john@example.com"
                                                 },
-                                                "phone": {
+                                                "phone_number": {
                                                     "type": "string",
                                                     "example": "+998901234567"
                                                 }
@@ -561,7 +562,7 @@
                                 "required": [
                                     "full_name",
                                     "email",
-                                    "phone"
+                                    "phone_number"
                                 ],
                                 "properties": {
                                     "full_name": {
@@ -573,7 +574,8 @@
                                         "format": "email",
                                         "example": "john@example.com"
                                     },
-                                    "phone": {
+                                    "phone_number": {
+                                        "description": "Phone number with country code",
                                         "type": "string",
                                         "example": "+998901234567"
                                     }
@@ -608,7 +610,7 @@
                                                     "type": "string",
                                                     "example": "john@example.com"
                                                 },
-                                                "phone": {
+                                                "phone_number": {
                                                     "type": "string",
                                                     "example": "+998901234567"
                                                 }
